<resources>
    <string name="app_name">Act2_EventButton-OnClickListener_136_A</string>
    <string name="var1">This is a message</string>
    <string name="btSignIn">Sign-in</string>
    <string name="tLogin">LOG-IN</string>
    <string name="tData">Your Data</string>
    <string name="tEmail">Email : </string>
    <string name="tPassword">Password : </string>
    <string name="txemail">This is Email</string>
    <string name="txpassword">This is Password</string>
    <string name="label2">Successfully Login!</string>
    <string name="lLogin">LOGIN</string>
    <string name="mRegist">Registrastion</string>
    <string name="lRegist">Regist</string>
    <string name="ename">Input name</string>
    <string name="eaddress">Input address</string>
    <string name="eemail">Input email</string>
    <string name="epass">Enter password</string>
    <string name="erepass">Re-enter password</string>
    <string name="viewdata">View Data</string>
    <string name="editdata">Edit Data</string>
    <string name="contactdata">Contact Data</string>
    <string name="itemname">Item Name</string>
    <string name="contactdetail">Contact Detail</string>
    <string name="name">Name</string>
    <string name="phoneno">Phone Number</string>

</resources>